Sentinel: refactorize to use ::redis
In previous commits, usage of redis::sentinel made impossible to run
::redis class which is the Puppet way to run this module.

This patch keeps feature parity but clean-up the implementation to use
::redis and configure Sentinel with the same configuration file as
regular system.

The rspec tests show that we can use ::redis and have Redis Sentinel
configuration that is expected.

--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -545,3 +545,9 @@ client-output-buffer-limit pubsub 32mb 8mb 60
 include <%= @extra_config_file %>
 <% end -%>
 
+<% if @sentinel_enabled -%>
+sentinel monitor <%= @sentinel_master_name %> <%= @sentinel_master_host %> <%= @sentinel_master_port %> <%= @sentinel_quorum %>
+sentinel down-after-milliseconds <%= @sentinel_master_name %> <%= @sentinel_down_after %>
+sentinel parallel-syncs <%= @sentinel_master_name %> <%= @sentinel_parallel_sync %>
+sentinel failover-timeout <%= @sentinel_master_name %> <%= @sentinel_failover_timeout %>
+<% end -%>
