--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -1,5 +1,6 @@
 port <%= @sentinel_port %>
 dir <%= @working_dir %>
+<% if @daemonize -%>daemonize yes<% else -%>daemonize no<% end -%>
 
 sentinel monitor <%= @master_name %> <%= @redis_host %> <%= @redis_port %> <%= @quorum %>
 sentinel down-after-milliseconds <%= @master_name %> <%= @down_after %>
