--- a/templates/redis-sentinel.init.erb
+++ b/templates/redis-sentinel.init.erb
@@ -7,8 +7,8 @@
 # Should-Stop:		$local_fs
 # Default-Start:	2 3 4 5
 # Default-Stop:		0 1 6
-# Short-Description:	redis-server - Persistent key-value db
-# Description:		redis-server - Persistent key-value db
+# Short-Description:	redis-sentinel - Monitor redis-server
+# Description:		redis-sentinel - Monitor redis-server
 ### END INIT INFO
 
 
