Add support for notification-script in sentinel
This commit add support for the configuration of a notification-script
in a redis-sentinel.

--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -7,5 +7,8 @@ sentinel monitor <%= @master_name %> <%= @redis_host %> <%= @redis_port %> <%= @
 sentinel down-after-milliseconds <%= @master_name %> <%= @down_after %>
 sentinel parallel-syncs <%= @master_name %> <%= @parallel_sync %>
 sentinel failover-timeout <%= @master_name %> <%= @failover_timeout %>
+<% if @notification_script -%>
+sentinel notification-script <%= @master_name %> <%= @notification_script %>
+<% end -%>
 
 logfile <%= @log_file %>
