--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -213,7 +213,7 @@ repl-timeout <%= @repl_timeout %>
 # Redis Sentinel for promotion.
 #
 # By default the priority is 100.
-slave-priority 100
+slave-priority <%= @slave_priority %>
 
 ################################## SECURITY ###################################
 
