--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -108,7 +108,7 @@ save 60 10000
 # and persistence, you may want to disable this feature so that Redis will
 # continue to work as usually even if there are problems with disk,
 # permissions, and so forth.
-stop-writes-on-bgsave-error yes
+<% if @stop_writes_on_bgsave_error -%>stop-writes-on-bgsave-error yes<% else -%>stop-writes-on-bgsave-error no<% end -%>
 
 # Compress string objects using LZF when dump .rdb databases?
 # For default that's set to 'yes' as it's almost always a win.
@@ -563,4 +563,3 @@ hz <%= @hz %>
 <% if @extra_config_file -%>
 include <%= @extra_config_file %>
 <% end -%>
-
