Adds save interval parameter

--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -114,9 +114,9 @@ databases <%= @databases %>
 #
 #   save ""
 <% if @save_db_to_disk %>
-save 900 1
-save 300 10
-save 60 10000
+<%- @save_db_to_disk_interval.sort_by{}.each do |seconds, key_change| -%>
+save <%= seconds -%> <%= key_change -%> <%= "\n" -%>
+<%- end -%>
 <% end %>
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
