Largish commit. In essence it implements a couple of features. multiple instances and sentinel changes to support multiple instances. To achieve this, a few things were changed.
  Redis:
    - Support for multiple_instances
    - Replication master support for multiple instances
    - Seperated slaveof_port as instances have their own ports
    - redis_binary_path needs to be in parameters
    - configurable redis_binary_path to support multiple
    - Configurable client output buffer limits
  Instances:
    - Each instance has it's own name
    - Instance has it's own init file,log file and conf file
    - Instance has it's own redis_binary_path, this is helpful when yo do ps aux and see instance name in the output
  Replication:
    - Slaveof port is added (instances run on different ports)
    - Check that We should not be making a host a slave of itself
  Sentinel:
    - Redhat needs it's own sentinel init file
    - Configurable sentinel_log_file

  Discovered Masters:
    - Sentinel configuration is tricky, You can bake who the master is in the configuration, but as the infrastructure lives on, the reality of who the sentinel thinks is the master for an instance changes. With the discovered_master flag you can use a simple .erb script (discover_master.erb) to find out who all the sentinel think the master is for a given instance. This allows you to reflect the current master in the sentinel configuration. If none of the sentinels are reachable or if the qourem is not reached, it defaults to the first item of $::redis::sentinel::members

    discovered_masters  is disabled by default and works only for instances right now.

Details:
manifests/params.pp
manifests/init.pp
manifests/config.pp
    - $::redis::params::redis_init_template
      $::redis::params::redis_init_file_mode
      $::redis::redis_binary_path
      $::redis::redis_binary_name
       ps aux on the command line gives a bunch of redis-server processes, unless the name of the binary has the name o

--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -118,6 +118,7 @@ databases <%= @databases %>
 save <%= seconds -%> <%= key_change -%> <%= "\n" -%>
 <%- end -%>
 <% end %>
+
 # By default Redis will stop accepting writes if RDB snapshots are enabled
 # (at least one save point) and the latest background save failed.
 # This will make the user aware (in a hard way) that data is not persisting
@@ -169,7 +170,7 @@ dir <%= @workdir %>
 # different interval, or to listen to another port, and so on.
 #
 # slaveof <masterip> <masterport>
-<% if @slaveof -%>slaveof <%= @slaveof %><% end -%>
+<% if (@slaveof && @slaveof_port) -%>slaveof <%= @slaveof %> <%= @slaveof_port %><% end -%>
 
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the slave to authenticate before
@@ -719,9 +720,9 @@ activerehashing <% if @activerehashing -%>yes<% else -%>no<% end -%>
 # subscribers and slaves receive data in a push fashion.
 #
 # Both the hard or the soft limit can be disabled just setting it to zero.
-client-output-buffer-limit normal 0 0 0
-client-output-buffer-limit slave 256mb 64mb 60
-client-output-buffer-limit pubsub 32mb 8mb 60
+client-output-buffer-limit normal <%= @client_output_buffer_limit_normal %>
+client-output-buffer-limit slave  <%= @client_output_buffer_limit_slave  %>
+client-output-buffer-limit pubsub <%= @client_output_buffer_limit_pubsub %>
 
 # Redis calls an internal function to perform many background tasks, like
 # closing connections of clients in timeout, purging expired keys that are
