--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -5,11 +5,46 @@ port <%= @sentinel_port %>
 dir <%= @working_dir %>
 <% if @daemonize -%>daemonize yes<% else -%>daemonize no<% end %>
 pidfile <%= @pid_file %>
-
+<%
+require 'json'
+instances = @instances
+discover_master = @discover_master
+discovered_json = @discovered_sentinel_info
+multiple_instances = @multiple_instances
+if (discover_master && instances && discovered_sentinel_info) then
+    discovered_sentinel_info = JSON.parse(discovered_json)
+    instances.each do |instance_name ,values|
+        port   =  discovered_sentinel_info[instance_name]['port']
+        master =  discovered_sentinel_info[instance_name]['sentinel_master']
+        quorum =  discovered_sentinel_info[instance_name]['quorum']
+-%>
+###############################################################
+sentinel monitor <%= instance_name %> <%= master %> <%= port %> <%= quorum %>
+sentinel down-after-milliseconds <%= instance_name %> <%= @down_after %>
+sentinel parallel-syncs <%= instance_name %> <%= @parallel_sync %>
+sentinel failover-timeout <%= instance_name %> <%= @failover_timeout  %>
+##############################################################
+<%
+    end
+elsif ( instances && multiple_instances ) then
+    instances.each do |instance_name, values|
+        port = values['port']
+-%>
+###############################################################
+sentinel monitor <%= instance_name %> <%= @redis_host %> <%= port %> <%= @quorum %>
+sentinel down-after-milliseconds <%= instance_name %> <%= @down_after %>
+sentinel parallel-syncs <%= instance_name %> <%= @parallel_sync %>
+sentinel failover-timeout <%= instance_name %> <%= @failover_timeout  %>
+##############################################################
+<%
+    end
+else
+-%>
 sentinel monitor <%= @master_name %> <%= @redis_host %> <%= @redis_port %> <%= @quorum %>
 sentinel down-after-milliseconds <%= @master_name %> <%= @down_after %>
 sentinel parallel-syncs <%= @master_name %> <%= @parallel_sync %>
 sentinel failover-timeout <%= @master_name %> <%= @failover_timeout %>
+<% end %>
 <% if @auth_pass -%>
 sentinel auth-pass <%= @master_name %> <%= @auth_pass %>
 <% end -%>
