--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -1,23 +1,23 @@
-<% unless [:undef, false].include?(scope['redis::sentinel::sentinel_bind']) -%>
-bind <%= scope['redis::sentinel::sentinel_bind'] %>
+<% if @sentinel_bind -%>
+bind <%= @sentinel_bind %>
 <% end -%>
-port <%= scope['redis::sentinel::sentinel_port'] %>
-dir <%= scope['redis::sentinel::working_dir'] %>
-<% if scope['redis::sentinel::daemonize'] -%>daemonize yes<% else -%>daemonize no<% end %>
-pidfile <%= scope['redis::sentinel::pid_file'] %>
+port <%= @sentinel_port %>
+dir <%= @working_dir %>
+<% if @daemonize -%>daemonize yes<% else -%>daemonize no<% end %>
+pidfile <%= @pid_file %>
 
-sentinel monitor <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::redis_host'] %> <%= scope['redis::sentinel::redis_port'] %> <%= scope['redis::sentinel::quorum'] %>
-sentinel down-after-milliseconds <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::down_after'] %>
-sentinel parallel-syncs <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::parallel_sync'] %>
-sentinel failover-timeout <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::failover_timeout'] %>
-<% unless [:undef, false].include?(scope['redis::sentinel::auth_pass']) -%>
-sentinel auth-pass <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::auth_pass'] %>
+sentinel monitor <%= @master_name %> <%= @redis_host %> <%= @redis_port %> <%= @quorum %>
+sentinel down-after-milliseconds <%= @master_name %> <%= @down_after %>
+sentinel parallel-syncs <%= @master_name %> <%= @parallel_sync %>
+sentinel failover-timeout <%= @master_name %> <%= @failover_timeout %>
+<% if @auth_pass -%>
+sentinel auth-pass <%= @master_name %> <%= @auth_pass %>
 <% end -%>
-<% unless [:undef, false].include?(scope['redis::sentinel::notification_script']) -%>
-sentinel notification-script <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::notification_script'] %>
+<% if @notification_script -%>
+sentinel notification-script <%= @master_name %> <%= @notification_script %>
 <% end -%>
-<% unless [:undef, false].include?(scope['redis::sentinel::client_reconfig_script']) -%>
-sentinel client-reconfig-script <%= scope['redis::sentinel::master_name'] %> <%= scope['redis::sentinel::client_reconfig_script'] %>
+<% if @client_reconfig_script -%>
+sentinel client-reconfig-script <%= @master_name %> <%= @client_reconfig_script %>
 <% end -%>
 
-logfile <%= scope['redis::sentinel::log_file'] %>
+logfile <%= @log_file %>
